[gd_scene load_steps=24 format=3 uid="uid://cthfvxsusnebo"]

[ext_resource type="Script" path="res://scenes/insidemagician.gd" id="1_cql6h"]
[ext_resource type="PackedScene" uid="uid://3kidvivnys7h" path="res://scenes/player.tscn" id="1_tewfm"]
[ext_resource type="Texture2D" uid="uid://dcwfyugcwxi1s" path="res://alchemist.png" id="2_5ntpv"]
[ext_resource type="Theme" uid="uid://babdwm0flbrd6" path="res://ScoreSize.tres" id="2_lop5h"]
[ext_resource type="Texture2D" uid="uid://bmxadfct0tyws" path="res://heart emoji.png" id="3_u05hc"]
[ext_resource type="Script" path="res://scenes/magician_quiz.gd" id="5_4lm5e"]
[ext_resource type="Script" path="res://scripts/quiz_ui.gd" id="5_yv5o3"]
[ext_resource type="StyleBox" uid="uid://b57oijho8rmej" path="res://normal_button_quiz.tres" id="6_g63rf"]
[ext_resource type="StyleBox" uid="uid://buit2etobpl21" path="res://CorrectAnswerStyle.tres" id="7_xrc3i"]
[ext_resource type="StyleBox" uid="uid://bph3hfo4lpnd" path="res://WrongAnswerStyle.tres" id="8_7t85k"]
[ext_resource type="StyleBox" uid="uid://dusrylw1u8v50" path="res://quiz_colours.tres" id="9_sxmbu"]
[ext_resource type="Theme" uid="uid://dvcwjkyhd571w" path="res://fontsize.tres" id="10_y4qol"]
[ext_resource type="Script" path="res://scenes/magician_exit.gd" id="12_mn1un"]
[ext_resource type="Texture2D" uid="uid://cv4mkumxisqwu" path="res://alchemist_exit.png" id="13_2osw3"]
[ext_resource type="Script" path="res://scenes/magician_dialogue_trigger.gd" id="13_fypoa"]
[ext_resource type="AudioStream" uid="uid://bo77gtcbxio75" path="res://audio_magician_1.mp3" id="14_0nnym"]
[ext_resource type="Script" path="res://scenes/magician_dialogue_trigger_2.gd" id="14_5qfg6"]
[ext_resource type="AudioStream" uid="uid://cthgkwurnh7vm" path="res://audio_magician_2.mp3" id="16_hnlyp"]
[ext_resource type="AudioStream" uid="uid://bnpc1qostc73" path="res://audio_magician_4.mp3" id="17_xgt3h"]
[ext_resource type="AudioStream" uid="uid://cs0ak4jnqj1py" path="res://audio_magician_3.mp3" id="19_a4fj7"]
[ext_resource type="Texture2D" uid="uid://chapqhdk3s7vu" path="res://alchemist_quiz_sprite.png" id="21_fn07n"]

[sub_resource type="Theme" id="Theme_fpjut"]
default_font_size = 35

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p13a5"]
size = Vector2(117.375, 8.5625)

[node name="Insidemagician" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_cql6h")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1412.0
offset_top = -688.0
offset_right = 3226.0
offset_bottom = 1805.0
color = Color(0.00784314, 0.00784314, 0.00784314, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 1412.0
offset_top = 688.0
offset_right = 3352.0
offset_bottom = 1740.0
texture = ExtResource("2_5ntpv")
stretch_mode = 4

[node name="CharacterBody2D" parent="." instance=ExtResource("1_tewfm")]
position = Vector2(1016, 1010)
scale = Vector2(1.5, 1.5)

[node name="LabelAnchor" type="Node2D" parent="CharacterBody2D"]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="CharacterBody2D/LabelAnchor"]
remote_path = NodePath("../../../World UI/UI position")
update_rotation = false
update_scale = false

[node name="World UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 3633.0
offset_top = 2132.0
offset_right = 3749.0
offset_bottom = 2172.0

[node name="UI position" type="Node2D" parent="World UI"]
position = Vector2(-2617, -1122)

[node name="Panel" type="Panel" parent="World UI/UI position"]
offset_left = 739.0
offset_top = -533.0
offset_right = 959.0
offset_bottom = -302.0
theme_override_styles/panel = ExtResource("9_sxmbu")

[node name="Score" type="Label" parent="World UI/UI position/Panel" groups=["ScoreBox"]]
layout_mode = 0
offset_left = 29.0
offset_top = 37.0
offset_right = 190.0
offset_bottom = 117.0
theme = ExtResource("2_lop5h")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lives" type="Label" parent="World UI/UI position/Panel" groups=["LivesBox"]]
layout_mode = 0
offset_left = 71.5
offset_top = 125.0
offset_right = 183.5
offset_bottom = 193.0
theme = ExtResource("2_lop5h")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Heart emoji" type="Sprite2D" parent="World UI/UI position/Panel" groups=["HeartEmoji"]]
position = Vector2(72.5, 162)
texture = ExtResource("3_u05hc")

[node name="Panel2" type="Panel" parent="World UI/UI position" groups=["PanelBox"]]
visible = false
offset_left = -944.0
offset_top = 382.0
offset_right = 941.0
offset_bottom = 527.0
theme_override_styles/panel = ExtResource("9_sxmbu")

[node name="Label" type="Label" parent="World UI/UI position/Panel2" groups=["DialogueBox"]]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00265252
anchor_top = -0.0344828
anchor_right = -0.00265252
anchor_bottom = 0.124138
offset_left = 37.0
offset_top = 36.0
offset_right = 1858.0
offset_bottom = 96.0
theme = SubResource("Theme_fpjut")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="QuizUI" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -1500.0
offset_right = 19.0
offset_bottom = -1480.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_yv5o3")
default_style = ExtResource("6_g63rf")
correct_style = ExtResource("7_xrc3i")
wrong_style = ExtResource("8_7t85k")

[node name="ColorRect" type="ColorRect" parent="QuizUI"]
layout_mode = 0
offset_left = -1000.0
offset_top = -554.0
offset_right = 1000.0
offset_bottom = 546.0

[node name="Panel" type="Panel" parent="QuizUI"]
layout_mode = 0
offset_left = -623.0
offset_top = -400.0
offset_right = 577.0
offset_bottom = 400.0
theme_override_styles/panel = ExtResource("9_sxmbu")

[node name="Label" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 118.0
offset_right = 1150.0
offset_bottom = 359.0
theme = ExtResource("10_y4qol")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 70.0
offset_top = 412.0
offset_right = 526.0
offset_bottom = 534.8
theme = ExtResource("10_y4qol")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "A"

[node name="Button2" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 660.0
offset_top = 412.0
offset_right = 1116.0
offset_bottom = 534.8
theme = ExtResource("10_y4qol")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "B"

[node name="Button3" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 70.0
offset_top = 596.0
offset_right = 526.0
offset_bottom = 718.8
theme = ExtResource("10_y4qol")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "C"

[node name="Button4" type="Button" parent="QuizUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.029
offset_left = 660.0
offset_top = 596.0
offset_right = 1116.0
offset_bottom = 718.8
theme = ExtResource("10_y4qol")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "D"

[node name="TimerLabel" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 956.0
offset_top = 29.0
offset_right = 1171.0
offset_bottom = 112.0
theme = ExtResource("10_y4qol")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Lives" type="Label" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 72.5
offset_top = 30.0
offset_right = 184.5
offset_bottom = 98.0
theme = ExtResource("2_lop5h")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Heart emoji" type="Sprite2D" parent="QuizUI/Panel"]
position = Vector2(79.5, 67)
texture = ExtResource("3_u05hc")

[node name="Hint" type="Panel" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 348.0
offset_top = 56.0
offset_right = 848.0
offset_bottom = 556.0
theme_override_styles/panel = ExtResource("9_sxmbu")

[node name="Label" type="Label" parent="QuizUI/Panel/Hint"]
layout_mode = 0
offset_left = 31.0
offset_top = 32.0
offset_right = 471.0
offset_bottom = 380.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Close Hint" type="Button" parent="QuizUI/Panel/Hint"]
layout_mode = 0
offset_left = 150.0
offset_top = 400.0
offset_right = 350.0
offset_bottom = 460.0
text = "Close Hint"

[node name="Hint Button" type="Button" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 72.0
offset_top = 371.0
offset_right = 172.0
offset_bottom = 402.0
text = "Hint"

[node name="Statistics" type="ScrollContainer" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 361.0
offset_right = 1153.0
offset_bottom = 750.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Stats_Label" type="Label" parent="QuizUI/Panel/Statistics"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Exit" type="Button" parent="QuizUI/Panel"]
layout_mode = 0
offset_left = 1056.0
offset_top = 45.0
offset_right = 1156.0
offset_bottom = 105.0
theme_override_styles/normal = ExtResource("6_g63rf")
text = "Exit"

[node name="Question Timer" type="Timer" parent="QuizUI"]
process_mode = 3

[node name="Global Timer" type="Timer" parent="QuizUI"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="QuizUI"]
bus = &"SFX"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1921, 1051, -5, 1058, -1, -3, 1927, 0, 1921, 1038, 1928, 1038, 1937, -24, -27, -40, -35, 1092, 1930, 1098, 1928, 1042, 1921, 1042)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(404, 1052, 550, 992, 538, 872, 547, 848, 445, 753, 271, 593, 56, 705, 66, 737, 114, 865, 267, 1051)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-4, 649, 229, 531, 230, 508, 282, 507, 314, 528, 391, 509, 453, 498, 443, 400, 721, 289, 765, 245, 792, 270, 966, 204, 996, 195, 1228, 315, 1311, 291, 1374, 315, 1355, 369, 1548, 459, 1656, 509, 1723, 504, 1760, 536, 1773, 571, 1758, 633, 1526, 828, 1496, 802, 1470, 922, 1399, 1003, 1385, 1056, 1927, 1048, 1934, -36, -33, -46)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(683, 450, 691, 559, 1068, 813, 1194, 761, 1386, 624, 1412, 527, 1002, 285)

[node name="Magician Exit" type="Area2D" parent="."]
position = Vector2(1870, 1889)
script = ExtResource("12_mn1un")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Magician Exit"]
position = Vector2(-963.5, -846.75)
scale = Vector2(8, 8)
shape = SubResource("RectangleShape2D_p13a5")

[node name="Exit" type="Sprite2D" parent="Magician Exit"]
position = Vector2(-804, -890)
scale = Vector2(1.92247, 2.13587)
texture = ExtResource("13_2osw3")

[node name="Label" type="Label" parent="Magician Exit"]
offset_left = -1201.0
offset_top = -999.0
offset_right = -928.0
offset_bottom = -964.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="MagicianDialogueTrigger" type="Area2D" parent="."]
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("13_fypoa")
audio_stream = ExtResource("14_0nnym")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MagicianDialogueTrigger"]
position = Vector2(-42.6, 190.8)
polygon = PackedVector2Array(146.8, 6.39999, 251, -7, 321.8, 25.4, 323.8, 23.2, 251, -10.2, 146.4, 2.59999)

[node name="MagicianDialogueTrigger2" type="Area2D" parent="."]
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("14_5qfg6")
audio_stream1 = ExtResource("16_hnlyp")
audio_stream2 = ExtResource("17_xgt3h")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MagicianDialogueTrigger2"]
position = Vector2(-203.6, 35.6)
polygon = PackedVector2Array(294.4, 64, 402.2, 173.6, 543.8, 100.6, 544.6, 96.2, 402.4, 170.8, 294.4, 60)

[node name="Magician Quiz" type="Area2D" parent="."]
position = Vector2(443, 1297)
scale = Vector2(5, 5)
audio_bus_name = &"Dialogue"
script = ExtResource("5_4lm5e")
audio_stream = ExtResource("19_a4fj7")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Magician Quiz"]
position = Vector2(-560, 105.6)
polygon = PackedVector2Array(603, -273.8, 669.6, -306.8, 754.8, -258, 690.2, -211.8)

[node name="Sprite2D" type="Sprite2D" parent="Magician Quiz"]
visible = false
position = Vector2(125.6, -155.6)
scale = Vector2(0.418915, 0.455038)
texture = ExtResource("21_fn07n")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Magician Quiz"]

[connection signal="pressed" from="QuizUI/Panel/Hint/Close Hint" to="QuizUI" method="_on_close_hint_pressed"]
[connection signal="pressed" from="QuizUI/Panel/Hint Button" to="QuizUI" method="_on_hint_button_pressed"]
[connection signal="pressed" from="QuizUI/Panel/Exit" to="QuizUI" method="_on_exit_pressed"]
[connection signal="timeout" from="QuizUI/Question Timer" to="QuizUI" method="_on_timer_timeout"]
[connection signal="mouse_entered" from="Magician Exit" to="Magician Exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Magician Exit" to="Magician Exit" method="_on_mouse_exited"]
[connection signal="body_entered" from="MagicianDialogueTrigger" to="MagicianDialogueTrigger" method="_on_body_entered"]
[connection signal="body_entered" from="MagicianDialogueTrigger2" to="MagicianDialogueTrigger2" method="_on_body_entered"]
[connection signal="mouse_entered" from="Magician Quiz" to="Magician Quiz" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Magician Quiz" to="Magician Quiz" method="_on_mouse_exited"]
